--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "obsidian-sample-plugin",
+	"name": "obsidian-page-data-viewer-plugin",
 	"version": "1.0.0",
 	"description": "This is a sample plugin for Obsidian (https://obsidian.md)",
 	"main": "main.js",
@@ -12,12 +12,21 @@
 	"author": "",
 	"license": "MIT",
 	"devDependencies": {
+		"@types/luxon": "^3.3.0",
 		"@types/node": "^16.11.6",
+		"@types/react": "^18.2.79",
+		"@types/react-dom": "^18.2.25",
 		"@typescript-eslint/eslint-plugin": "5.29.0",
 		"@typescript-eslint/parser": "5.29.0",
 		"builtin-modules": "3.3.0",
 		"esbuild": "0.17.3",
+		"luxon": "^3.4.4",
+		"marked": "^12.0.2",
 		"obsidian": "latest",
+		"obsidian-dataview": "^0.5.66",
+		"react": "^18.2.0",
+		"react-dom": "^18.2.0",
+		"react-error-boundary": "^4.0.13",
 		"tslib": "2.4.0",
 		"typescript": "4.7.4"
 	}
