--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "baseUrl": ".",
+    "baseUrl": "./src",
     "inlineSourceMap": true,
     "inlineSources": true,
     "module": "ESNext",
@@ -10,7 +10,9 @@
     "moduleResolution": "node",
     "importHelpers": true,
     "isolatedModules": true,
-	"strictNullChecks": true,
+    "jsx": "react-jsx",
+    "allowSyntheticDefaultImports": true,
+    "strictNullChecks": true,
     "lib": [
       "DOM",
       "ES5",
@@ -19,6 +21,7 @@
     ]
   },
   "include": [
-    "**/*.ts"
+    "src/**/*.ts",
+    "src/**/*.tsx"
   ]
 }
