--- a/package.json
+++ b/package.json
@@ -28,5 +28,8 @@
 		"react-error-boundary": "^4.0.13",
 		"tslib": "2.4.0",
 		"typescript": "4.7.4"
+	},
+	"dependencies": {
+		"lucide-react": "^0.379.0"
 	}
 }
